--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aws-amplify": "^6.16.2",
     "react": "^19.2.0",
-    "react-dom": "^19.2.0"
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.13.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
